adding swagger in /docs route
