# swagger.json
@@ -1,5 +1,20 @@
 {
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "schemes": [
+    "http",
+    "https"
+  ],
   "swagger": "2.0",
+  "info": {
+    "title": "Pokemon API:",
+    "version": "1.0"
+  },
+  "basePath": "/",
   "paths": {
     "/api/pokemon/generate": {
       "get": {
@@ -162,6 +177,13 @@
           "type": "string"
         }
       }
+    }
+  },
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
     }
   }
 }
